blocks/main/__image/main__image.css
.main__image {
  position: absolute;

  bottom: -100px;
  right: -8vw;
  z-index: -1;
  width: 65vw;

  max-width: 885px;
}

@media screen and (max-width: 1350px) {
  .main__image {
    right: calc((100vw - 1120px) / (1350 - 1120) * -92);
  }
}

@media screen and (max-width: 1120px) {
  .main__image {
    width: 65vw;
    right: -2vw;
  }
}

@media screen and (max-width: 768px) {
  .main__image {
    bottom: calc((100vw - 470px) / (768 - 470) * (-100 + 50) - 50px);
  }
}

@media screen and (max-width: 470px) {
  .main__image {
    display: block;
    position: static;
    margin: 0 auto;
    transform: translateX(-10px);
    width: 100%;
  }
}

